--- a/vanilla-examples/vanillajs/index.html
+++ b/vanilla-examples/vanillajs/index.html
@@ -27,9 +27,9 @@
 	</section>
 	<footer id="info">
 		<p>Double-click to edit a todo</p>
-		<p>Template by <a href="http://github.com/sindresorhus">Sindre Sorhus</a></p>
 		<p>Created by <a href="http://twitter.com/ffesseler">Florian Fesseler</a></p>
 		<p>Cleanup, edits by <a href="http://github.com/boushley">Aaron Boushley</a></p>
+		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
 	<script src="../../assets/base.js"></script>
 	<script src="js/app.js"></script>
