Hide Backbone.xmpp from index as long as it's offline

--- a/index.html
+++ b/index.html
@@ -218,9 +218,12 @@
 					<li class="labs">
 						<a href="labs/architecture-examples/socketstream/README.md" data-source="http://www.socketstream.org" data-content="SocketStream is a fast, modular Node.js web framework dedicated to building realtime single-page apps">SocketStream</a>
 					</li>
+					<!--
+					// Link is currently not working.
 					<li class="routing labs">
 						<a href="http://todomvc.crypho.com" data-source="https://github.com/ggozad/Backbone.xmpp" data-content="Backbone.xmpp is a drop-in replacement for Backbone’s RESTful API, allowing models/collections to be persisted on XMPP Pub-Sub nodes providing real-time updates.">Backbone.xmpp</a>
 					</li>
+					-->
 				</ul>
 				<hr>
 				<h2>Compare these to a non-framework implementation</h2>
