--- a/architecture-examples/jquery/index.html
+++ b/architecture-examples/jquery/index.html
@@ -4,11 +4,8 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>jQuery • TodoMVC</title>
-		<link rel="stylesheet" href="../../assets/base.css">
+		<link rel="stylesheet" href="components/todomvc-common/base.css">
 		<link rel="stylesheet" href="css/app.css">
-		<!--[if IE]>
-		<script src="../../assets/ie.js"></script>
-		<![endif]-->
 	</head>
 	<body>
 		<section id="todoapp">
@@ -47,9 +44,9 @@
 		<span id="todo-count"><strong>{{activeTodoCount}}</strong> {{activeTodoWord}} left</span>
 		{{#if completedTodos}}<button id="clear-completed">Clear completed ({{completedTodos}})</button>{{/if}}
 		</script>
-		<script src="../../assets/base.js"></script>
-		<script src="../../assets/jquery.min.js"></script>
-		<script src="../../assets/handlebars.min.js"></script>
+		<script src="components/todomvc-common/base.js"></script>
+		<script src="components/jquery/jquery.js"></script>
+		<script src="components/handlebars/handlebars.js"></script>
 		<script src="js/app.js"></script>
 	</body>
 </html>
