--- a/architecture-examples/agilityjs/index.html
+++ b/architecture-examples/agilityjs/index.html
@@ -4,10 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Agility.js • TodoMVC</title>
-	<link rel="stylesheet" href="../../assets/base.css">
-	<!--[if IE]>
-	<script src="../../assets/ie.js"></script>
-	<![endif]-->
+	<link rel="stylesheet" href="components/todomvc-common/base.css">
 </head>
 <body>
 	<section id="todoapp">
@@ -50,9 +47,9 @@
 		<p>Created by <a href="http://github.com/tshm/todomvc/">Tosh Shimayama</a></p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
-	<script src="../../assets/base.js"></script>
-	<script src="../../assets/jquery.min.js"></script>
-	<script src="js/lib/agility.min.js"></script>
+	<script src="components/todomvc-common/base.js"></script>
+	<script src="components/jquery/jquery.js"></script>
+	<script src="components/agility/agility.js"></script>
 	<script src="js/localstorage.js"></script>
 	<script src="js/app.js"></script>
 </body>
