--- a/architecture-examples/angularjs-perf/index.html
+++ b/architecture-examples/angularjs-perf/index.html
@@ -4,12 +4,8 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>AngularJS • TodoMVC</title>
-		<link rel="stylesheet" href="../../assets/base.css">
+		<link rel="stylesheet" href="components/todomvc-common/base.css">
 		<style>[ng-cloak] {display: none}</style>
-		<!--[if IE]>
-		<script src="../../assets/ie.js"></script>
-		<![endif]-->
-
 	</head>
 	<body>
 		<section id="todoapp" ng-controller="TodoCtrl">
@@ -63,8 +59,8 @@
 			</p>
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
-		<script src="../../assets/base.js"></script>
-		<script src="js/libs/angular/angular.min.js"></script>
+		<script src="components/todomvc-common/base.js"></script>
+		<script src="components/angular/angular.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/controllers/todoCtrl.js"></script>
 		<script src="js/services/todoStorage.js"></script>
