--- a/architecture-examples/emberjs/index.html
+++ b/architecture-examples/emberjs/index.html
@@ -4,10 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>ember.js • TodoMVC</title>
-  <link rel="stylesheet" href="../../assets/base.css">
-  <!--[if IE]>
-  <script src="../../assets/ie.js"></script>
-  <![endif]-->
+  <link rel="stylesheet" href="components/todomvc-common/base.css">
 </head>
 <body>
   <script type="text/x-handlebars" data-template-name="todos">
@@ -71,12 +68,13 @@
   </script>
 
   <!-- /* Handlebars templates end */ -->
-  <script src="../../assets/base.js"></script>
-  <script src="../../assets/jquery.min.js"></script>
-  <script src="js/libs/handlebars-1.0.rc.3.js"></script>
-  <script src="js/libs/ember.js"></script>
+  <script src="components/todomvc-common/base.js"></script>
+  <script src="components/jquery/jquery.js"></script>
+  <script src="components/handlebars/handlebars.js"></script>
+  <script src="components/ember/ember.js"></script>
+  <!-- TODO: change out with a component when a built one is available on Bower -->
   <script src="js/libs/ember-data.js"></script>
-  <script src="js/libs/local_storage_adapter.js"></script>
+  <script src="components/ember-localstorage-adapter/localstorage_adapter.js"></script>
   <script src="js/app.js"></script>
   <script src="js/router.js"></script>
   <script src="js/models/todo.js"></script>
