--- a/architecture-examples/knockoutjs/index.html
+++ b/architecture-examples/knockoutjs/index.html
@@ -4,10 +4,7 @@
 		<meta charset="utf-8">
 		<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 		<title>Knockout.js • TodoMVC</title>
-		<link href="../../assets/base.css" rel="stylesheet">
-		<!--[if IE]>
-		<script src="../../assets/ie.js"></script>
-		<![endif]-->
+		<link rel="stylesheet" href="components/todomvc-common/base.css">
 	</head>
 	<body>
 		<section id="todoapp">
@@ -57,9 +54,9 @@
 			<p>Patches/fixes for cross-browser compat: <a href="http://twitter.com/addyosmani">Addy Osmani</a></p>
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
-		<script src="../../assets/base.js"></script>
-		<script src="../../assets/director.min.js"></script>
-		<script src="js/lib/knockout.min.js"></script>
+		<script src="components/todomvc-common/base.js"></script>
+		<script src="components/knockout.js/knockout.js"></script>
+		<script src="components/director/build/director.js"></script>
 		<script src="js/app.js"></script>
 	</body>
 </html>
