--- a/labs/architecture-examples/backbone_marionette/index.html
+++ b/labs/architecture-examples/backbone_marionette/index.html
@@ -4,11 +4,8 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>Marionette • TodoMVC</title>
-		<link rel="stylesheet" href="../../../assets/base.css">
+		<link rel="stylesheet" href="components/todomvc-common/base.css">
 		<link rel="stylesheet" href="css/app.css">
-		<!--[if IE]>
-		<script src="../../../assets/ie.js"></script>
-		<![endif]-->
 		<script type="text/html" id="template-footer">
 			<span id="todo-count"><strong></strong><span></span></span>
 			<ul id="filters">
@@ -58,12 +55,12 @@
 			<p>Further variations on the Backbone.Marionette app are also <a href="https://github.com/marionettejs/backbone.marionette/wiki/Projects-and-websites-using-marionette">available</a>.</p>
 		</footer>
 		<!-- vendor libraries -->
-		<script src="../../../assets/base.js"></script>
-		<script src="../../../assets/jquery.min.js"></script>
-		<script src="../../../assets/lodash.min.js"></script>
-		<script src="js/lib/backbone.js"></script>
-		<script src="js/lib/backbone.localStorage.js"></script>
-		<script src="js/lib/backbone.marionette.js"></script>
+		<script src="components/todomvc-common/base.js"></script>
+		<script src="components/jquery/jquery.js"></script>
+		<script src="components/lodash/lodash.js"></script>
+		<script src="components/backbone/backbone.js"></script>
+		<script src="components/backbone.localStorage/backbone.localStorage.js"></script>
+		<script src="components/backbone.marionette/lib/backbone.marionette.js"></script>
 		<!-- application -->
 		<script src="js/TodoMVC.js"></script>
 		<script src="js/TodoMVC.Todos.js"></script>
