Backbone + RequireJS: Use Bower components
Ref #475

--- a/dependency-examples/backbone_require/index.html
+++ b/dependency-examples/backbone_require/index.html
@@ -6,7 +6,6 @@
 	<title>Backbone.js + RequireJS • TodoMVC</title>
 	<link rel="stylesheet" href="../../assets/base.css">
 	<script src="../../assets/base.js"></script>
-	<script data-main="js/main" src="js/lib/require/require.js"></script>
 	<!--[if IE]>
 	<script src="../../assets/ie.js"></script>
 	<![endif]-->
@@ -29,5 +28,6 @@
 		<p>Written by <a href="http://addyosmani.github.com/todomvc/">Addy Osmani</a></p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
+	<script data-main="js/main" src="components/requirejs/require.js"></script>
 </body>
 </html>
