--- a/dependency-examples/backbone_require/index.html
+++ b/dependency-examples/backbone_require/index.html
@@ -4,11 +4,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Backbone.js + RequireJS • TodoMVC</title>
-	<link rel="stylesheet" href="../../assets/base.css">
-	<script src="../../assets/base.js"></script>
-	<!--[if IE]>
-	<script src="../../assets/ie.js"></script>
-	<![endif]-->
+	<link rel="stylesheet" href="components/todomvc-common/base.css">
+	<script src="components/todomvc-common/base.js"></script>
 </head>
 <body>
 	<section id="todoapp">
