Backbone: Consistency fix, <footer> instead of <div>

--- a/architecture-examples/backbone/index.html
+++ b/architecture-examples/backbone/index.html
@@ -19,11 +19,11 @@
 			</section>
 			<footer id="footer"></footer>
 		</section>
-		<div id="info">
+		<footer id="info">
 			<p>Double-click to edit a todo</p>
 			<p>Written by <a href="https://github.com/addyosmani">Addy Osmani</a></p>
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
-		</div>
+		</footer>
 		<script type="text/template" id="item-template">
 			<div class="view">
 				<input class="toggle" type="checkbox" <%= completed ? 'checked' : '' %>>
