--- a/labs/dependency-examples/angularjs_require/index.html
+++ b/labs/dependency-examples/angularjs_require/index.html
@@ -4,11 +4,8 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>AngularJS • TodoMVC</title>
-		<link rel="stylesheet" href="../../../assets/base.css">
+		<link rel="stylesheet" href="components/todomvc-common/base.css">
 		<style>[ng-cloak] {display: none}</style>
-		<!--[if IE]>
-		<script src="../../../assets/ie.js"></script>
-		<![endif]-->
 		<script>
 		// Include angular-loader to allow modules to be loaded in any order.
 		/*
@@ -72,7 +69,7 @@
 		</p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
-	<script src="../../../assets/base.js"></script>
-	<script data-main="js/main" src="../../../assets/require.min.js"></script>
+	<script src="components/todomvc-common/base.js"></script>
+	<script data-main="js/main" src="components/requirejs/require.js"></script>
 </body>
 </html>
