CanJS: Partly moved to Bower components
Refs #475

--- a/architecture-examples/canjs/index.html
+++ b/architecture-examples/canjs/index.html
@@ -4,24 +4,21 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>CanJS • TodoMVC</title>
-		<link rel="stylesheet" href="../../assets/base.css">
-		<!--[if IE]>
-		<script src="../../assets/ie.js"></script>
-		<![endif]-->
+		<link rel="stylesheet" href="components/todomvc-common/base.css">
 	</head>
 	<body>
 		<section id="todoapp">
 		</section>
-		<div id="info">
+		<footer id="info">
 			<p>Double-click to edit a todo</p>
 			<p>Written by <a href="http://bitovi.com">Bitovi</a></p>
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
-		</div>
+		</footer>
 
-		<script src="../../assets/jquery.min.js"></script>
-		<script src="../../assets/base.js"></script>
+		<script src="components/jquery/jquery.js"></script>
+		<script src="components/todomvc-common/base.js"></script>
 
-		<script src="js/lib/can.jquery-1.1.0.min.js"></script>
+		<script src="components/canjs/can.jquery.min.js"></script>
 		<script src="js/lib/can.mustache.min.js"></script>
 		<script src="js/lib/can.localstorage.min.js"></script>
 		<script src="js/models/todo.js"></script>
