--- a/architecture-examples/canjs/index.html
+++ b/architecture-examples/canjs/index.html
@@ -18,7 +18,7 @@
 		<script src="components/jquery/jquery.js"></script>
 		<script src="components/todomvc-common/base.js"></script>
 
-		<script src="components/canjs/can.jquery.min.js"></script>
+		<script src="components/canjs/can.jquery.js"></script>
 		<script src="js/lib/can.mustache.min.js"></script>
 		<script src="js/lib/can.localstorage.min.js"></script>
 		<script src="js/models/todo.js"></script>
