--- a/architecture-examples/canjs/index.html
+++ b/architecture-examples/canjs/index.html
@@ -17,10 +17,10 @@
 
 		<script src="components/jquery/jquery.js"></script>
 		<script src="components/todomvc-common/base.js"></script>
-
 		<script src="components/canjs/can.jquery.js"></script>
+		<script src="components/canjs-localstorage/can.localstorage.js"></script>
+
 		<script src="js/lib/can.mustache.min.js"></script>
-		<script src="js/lib/can.localstorage.min.js"></script>
 		<script src="js/models/todo.js"></script>
 		<script src="js/todos/todos.js"></script>
 		<script src="js/app.js"></script>
