--- a/architecture-examples/spine/index.html
+++ b/architecture-examples/spine/index.html
@@ -4,10 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Spine.js • TodoMVC</title>
-	<link rel="stylesheet" href="../../assets/base.css">
-	<!--[if IE]>
-	<script src="../../assets/ie.js"></script>
-	<![endif]-->
+	<link rel="stylesheet" href="components/todomvc-common/base.css">
 </head>
 <body>
 	<section id="todoapp">
@@ -54,12 +51,13 @@
 	</li>
 	{{/this}}
 	</script>
-	<script src="../../assets/base.js"></script>
-	<script src="../../assets/jquery.min.js"></script>
-	<script src="../../assets/handlebars.min.js"></script>
-	<script src="js/lib/spine.min.js"></script>
-	<script src="js/lib/route.min.js"></script>
-	<script src="js/lib/local.js"></script>
+	<script src="components/todomvc-common/base.js"></script>
+	<script src="components/jquery/jquery.js"></script>
+	<script src="components/handlebars/handlebars.js"></script>
+	<script src="components/spine/lib/spine.js"></script>
+	<script src="components/spine/lib/route.js"></script>
+	<script src="components/spine/lib/local.js"></script>
+
 	<script src="js/controllers/todos.js"></script>
 	<script src="js/models/todo.js"></script>
 	<script src="js/app.js"></script>
