The footer was not showing because it was the second top-level element in the TodosTemplate and a view only has one top-level element: the first one in the template. Move the footer to index.html since it is not really part of the application anyway.

--- a/labs/architecture-examples/maria/src/index.html
+++ b/labs/architecture-examples/maria/src/index.html
@@ -26,5 +26,11 @@
 	<script src="js/controllers/TodoController.js"></script>
 	<script src="js/bootstrap.js"></script>
 
+	<footer id="info">
+		<p>Double-click to edit a todo</p>
+		<p>Created by <a href="http://github.com/petermichaux">Peter Michaux</a></p>
+        <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+	</footer>
+
 </body>
 </html>
