move Maria app to stable architecture-examples directory

--- a/architecture-examples/maria/src/index.html
+++ b/architecture-examples/maria/src/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Maria • TodoMVC</title>
 
-	<link href="../../../../assets/base.css" rel="stylesheet">
+	<link href="../../../assets/base.css" rel="stylesheet">
 	<link href="css/app.css" rel="stylesheet">
 
 </head>
@@ -12,7 +12,7 @@
 
 	<script src="../lib/maria/maria.js"></script>
 	<script src="../lib/aristocrat/aristocrat.js"></script>
-	<script src="../../../../assets/director.min.js"></script>
+	<script src="../../../assets/director.min.js"></script>
 
 	<script src="js/namespace.js"></script>
 	<script src="js/util.js"></script>
