--- a/labs/architecture-examples/puremvc/index.html
+++ b/labs/architecture-examples/puremvc/index.html
@@ -4,10 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>PureMVC • TodoMVC</title>
-		<link rel="stylesheet" href="../../../assets/base.css">
-		<!--[if IE]>
-			<script src="assets/ie.js"></script>
-		<![endif]-->
+		<link rel="stylesheet" href="components/todomvc-common/base.css">
 	</head>
 	<body>
 		<section id="todoapp">
@@ -44,13 +41,13 @@
 		</footer>
 
 		<!-- TODOMVC PROJECT BASE -->
-		<script src="../../../assets/base.js"></script>
+		<script src="components/todomvc-common/base.js"></script>
 
 		<!-- FLATIRION DIRECTOR ROUTING LIBRARY -->
-		<script src="../../../assets/director.min.js"></script>
+		<script src="components/director/director.js"></script>
 
 		<!-- PUREMVC LIBRARY -->
-		<script src="js/lib/puremvc.min.js"></script>
+		<script src="components/puremvc/puremvc-1.0.1.js"></script>
 
 		<!-- APPLICATION CONSTANTS -->
 		<script src="js/AppConstants.js"></script>
