--- a/labs/architecture-examples/olives/index.html
+++ b/labs/architecture-examples/olives/index.html
@@ -4,11 +4,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Olives • TodoMVC</title>
-	<link rel="stylesheet" href="../../../assets/base.css">
+	<link rel="stylesheet" href="components/todomvc-common/base.css">
 	<link rel="stylesheet" href="css/app.css">
-	<!--[if IE]>
-	<script src="../../../assets/ie.js"></script>
-	<![endif]-->
 </head>
 <body>
 	<section id="todoapp">
@@ -42,10 +39,10 @@
 		<p>Created by <a href="http://github.com/podefr">Olivier Scherrer</a></p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
-	<script src="../../../assets/base.js"></script>
-	<script src="js/lib/require.js"></script>
-	<script src="js/lib/Emily.js"></script>
-	<script src="js/lib/Olives.js"></script>
+	<script src="components/todomvc-common/base.js"></script>
+	<script src="components/requirejs/require.js"></script>
+	<script src="components/emily/build/Emily.js"></script>
+	<script src="components/olives/build/Olives.js"></script>
 	<script src="js/lib/Tools.js"></script>
 	<script src="js/uis/Input.js"></script>
 	<script src="js/uis/List.js"></script>
