Added routing flag for sammy, changelog updated

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					<li class="labs">
 						<a href="labs/architecture-examples/extjs/" data-source="http://www.sencha.com/products/extjs" data-content="Ext JS 4 is the next major advancement in our JavaScript framework. Featuring expanded functionality, plugin-free charting, and a new MVC architecture it's the best Ext JS yet. Create incredible web apps for every browser.">Ext.js</a>
 					</li>
-					<li class="labs">
+					<li class="routing labs">
 						<a href="labs/architecture-examples/sammyjs/" data-source="http://sammyjs.org" data-content="Sammy.js is a tiny JavaScript framework developed to ease the pain and provide a basic structure for developing JavaScript applications.">Sammy.js</a>
 					</li>
 					<li class="routing labs">
