--- a/architecture-examples/closure/index.html
+++ b/architecture-examples/closure/index.html
@@ -4,10 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Closure • TodoMVC</title>
-	<link rel="stylesheet" href="../../assets/base.css">
-	<!--[if IE]>
-	<script src="../../assets/ie.js"></script>
-	<![endif]-->
+	<link rel="stylesheet" href="components/todomvc-common/base.css">
 </head>
 <body>
 	<section id="todoapp">
@@ -40,7 +37,7 @@
 		<p>Created by <a href="http://www.scottlogic.co.uk/blog/chris/">Chris Price</a></p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
-	<script src="../../assets/base.js"></script>
+	<script src="components/todomvc-common/base.js"></script>
 	<!-- The compiled version (to update run java -jar build/plovr.jar build plovr.json > js/compiled.js) -->
 	<script type="text/javascript" src="js/compiled.js"></script>
 	<!-- The RAW development version (to serve the files run java -jar build/plovr.jar serve plovr.json) -->
