--- a/dependency-examples/flight/index.html
+++ b/dependency-examples/flight/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>Flight • Todo</title>
-		<link rel="stylesheet" href="../../assets/base.css">
+		<link rel="stylesheet" href="components/todomvc-common/base.css">
 	</head>
 	<body>
 		<section id="todoapp">
@@ -24,7 +24,7 @@
 			<p>Created by <a href="http://github.com/mkuklis">Michal Kuklis</a></p>
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
-		<script src="../../assets/base.js"></script>
+		<script src="components/todomvc-common/base.js"></script>
 		<script data-main="app/js/main" src="components/requirejs/requirejs.js"></script>
 	</body>
 </html>
