--- a/labs/dependency-examples/troopjs/index.html
+++ b/labs/dependency-examples/troopjs/index.html
@@ -4,11 +4,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Troop.js • TodoMVC</title>
-	<link rel="stylesheet" href="../../../assets/base.css">
+	<link rel="stylesheet" href="components/todomvc-common/base.css">
 	<link rel="stylesheet" href="css/app.css">
-	<!--[if IE]>
-	<script src="../../../assets/ie.js"></script>
-	<![endif]-->
 </head>
 <body>
 	<section id="todoapp">
@@ -22,7 +19,9 @@
 			<ul id="todo-list" data-weave="widget/list"></ul>
 		</section>
 		<footer id="footer" data-weave="widget/display">
-			<span id="todo-count" data-weave="widget/count"><strong>0</strong> items left</span>
+			<span id="todo-count" data-weave="widget/count">
+				<strong>0</strong> items left
+			</span>
 			<ul id="filters" data-weave="widget/filters">
 				<li>
 					<a href="#/">All</a>
@@ -42,7 +41,7 @@
 		<p>Created by <a href="http://github.com/mikaelkaron">Mikael Karon</a></p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
-	<script src="../../../assets/base.js"></script>
-	<script type="text/javascript" data-main="js/app.js" src="../../../assets/require.min.js"></script>
+	<script src="components/todomvc-common/base.js"></script>
+	<script data-main="js/app.js" src="components/requirejs/require.js"></script>
 </body>
 </html>
