maria updated to use bower.

--- a/architecture-examples/maria/index.html
+++ b/architecture-examples/maria/index.html
@@ -3,16 +3,20 @@
 <head>
 	<meta charset="utf-8">
 	<title>Maria • TodoMVC</title>
-
-	<link href="../../../assets/base.css" rel="stylesheet">
+	<link href="components/todomvc-common/base.css" rel="stylesheet">
 	<link href="css/app.css" rel="stylesheet">
-
 </head>
 <body>
+	<footer id="info">
+		<p>Double-click to edit a todo</p>
+		<p>Created by <a href="http://github.com/petermichaux">Peter Michaux</a></p>
+		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+	</footer>
 
-	<script src="../lib/maria/maria.js"></script>
-	<script src="../lib/aristocrat/aristocrat.js"></script>
-	<script src="../../../assets/director.min.js"></script>
+	<script src="components/todomvc-common/base.js"></script>
+	<script src="components/director/build/director.js"></script>
+	<script src="lib/maria/maria.js"></script>
+	<script src="lib/aristocrat/aristocrat.js"></script>
 
 	<script src="js/namespace.js"></script>
 	<script src="js/util.js"></script>
@@ -25,12 +29,5 @@
 	<script src="js/views/TodoView.js"></script>
 	<script src="js/controllers/TodoController.js"></script>
 	<script src="js/bootstrap.js"></script>
-
-	<footer id="info">
-		<p>Double-click to edit a todo</p>
-		<p>Created by <a href="http://github.com/petermichaux">Peter Michaux</a></p>
-		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
-	</footer>
-
 </body>
 </html>
