Added Gittip button to the top

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 				<nav>
 					<a href="https://github.com/addyosmani/todomvc/zipball/1.1.0" class="zocial red">Download (1.1)</a>
 					<a href="https://github.com/addyosmani/todomvc" class="zocial red">View project on GitHub</a>
+					<a href="https://www.gittip.com/tastejs/" class="zocial ltgray">
+						We receive <strong>$<var class="gittip-amount">0.00</var> / wk</strong>
+						on <strong>Gittip</strong>
+					</a>
 				</nav>
 			</div>
 			<div class="span4">
