--- a/vanilla-examples/vanillajs/index.html
+++ b/vanilla-examples/vanillajs/index.html
@@ -39,6 +39,10 @@
 	</footer>
 	<script src="components/todomvc-common/base.js"></script>
 	<script src="components/director/build/director.js"></script>
+	<script>
+		// Bootstrap app data
+		window.app = {};
+	</script>
 	<script src="js/helpers.js"></script>
 	<script src="js/store.js"></script>
 	<script src="js/model.js"></script>
