soma.js version 2 in progress
todo scope in models updated

somajs update and comments

somajs update

soma.js and require.js added

whitespace update

main view hide update

jshint errors update

jshint errors update

cleanup requirejs dependencies

save on blur and remote persistent editing

todomvc-common update on soma.js

cleanup bower components in soma.js

--- a/labs/dependency-examples/somajs_require/index.html
+++ b/labs/dependency-examples/somajs_require/index.html
@@ -61,21 +61,10 @@
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
 
-		<!-- LIBRARIES -->
-
-		<script src="components/todomvc-common/base.js"></script>
-		<script src="components/director/build/director.js"></script>
-		<script src="components/soma.js/build/soma.js"></script>
-		<script src="components/soma-template/build/soma-template.js"></script>
-
 		<!-- TODO APP -->
 
-		<script src="js/models/todos.js"></script>
-		<script src="js/models/router.js"></script>
-		<script src="js/views/header.js"></script>
-		<script src="js/views/main.js"></script>
-		<script src="js/views/footer.js"></script>
-		<script src="js/app.js"></script>
+		<script src="components/todomvc-common/base.js"></script>
+		<script data-main="js/app" src="components/requirejs/require.js"></script>
 
 	</body>
 </html>
