--- a/labs/architecture-examples/backbone_marionette/index.html
+++ b/labs/architecture-examples/backbone_marionette/index.html
@@ -23,10 +23,13 @@
 			<p>Further variations on the Backbone.Marionette app are also <a href="https://github.com/marionettejs/backbone.marionette/wiki/Projects-and-websites-using-marionette">available</a>.</p>
 		</footer>
 		<script type="text/html" id="template-footer">
-			<span id="todo-count"><strong></strong><span></span></span>
+			<span id="todo-count">
+				<strong><%= activeCount %></strong>
+				<span> <%= activeCountLabel() %></span>
+			</span>
 			<ul id="filters">
 				<li>
-					<a href="#">All</a>
+					<a href="#" class="selected">All</a>
 				</li>
 				<li>
 					<a href="#active">Active</a>
@@ -35,7 +38,10 @@
 					<a href="#completed">Completed</a>
 				</li>
 			</ul>
-			<button id="clear-completed"></button>
+
+			<% if (completedCount > 0) { %>
+				<button id="clear-completed">Clear completed (<%= completedCount %>)</button>
+			<% } %>
 		</script>
 		<script type="text/html" id="template-header">
 			<h1>todos</h1>
