backbone_marionette_require code style.

--- a/labs/dependency-examples/backbone_marionette_require/index.html
+++ b/labs/dependency-examples/backbone_marionette_require/index.html
@@ -19,9 +19,8 @@
 	<footer id="info">
 		<p>Double-click to edit a todo</p>
 		<p>Created by <a href="http://github.com/jsoverson">Jarrod Overson</a></p>
-		<p><a href="index-dev.html">View the unbuilt version</a></p>
 	</footer>
 	<script src="bower_components/todomvc-common/base.js"></script>
-	<script data-main="js/main.built" src="bower_components/requirejs/require.js"></script>
+	<script data-main="js/main" src="bower_components/requirejs/require.js"></script>
 </body>
 </html>
