--- a/labs/dependency-examples/knockoutjs_require/index.html
+++ b/labs/dependency-examples/knockoutjs_require/index.html
@@ -10,8 +10,7 @@
 	<section id="todoapp">
 		<header id="header">
 			<h1>todos</h1>
-			<input id="new-todo" type="text" data-bind="value: current, valueUpdate: 'afterkeydown', enterKey: add"
-					placeholder="What needs to be done?" autofocus>
+			<input id="new-todo" type="text" data-bind="value: current, valueUpdate: 'afterkeydown', enterKey: add" placeholder="What needs to be done?" autofocus>
 		</header>
 		<section id="main" data-bind="visible: todos().length">
 			<input id="toggle-all" type="checkbox" data-bind="checked: allCompleted">
