Initial add of React TodoMVC to labs
React is a JavaScript library for building user interfaces by Facebook and Instagram. It powers many components on Facebook.com and all of Instagram.com is written with it. We have two TodoMVC examples checked into our repo: this one, which has no dependencies, and another one which showcases Backbone integration. I've only included the first one for now, if you guys think it's a good idea I can put out a PR for the one with Backbone integration.

I read the contributing guide and I think this meets the standards, let me know if I missed something.

--- a/index.html
+++ b/index.html
@@ -144,6 +144,9 @@
 					<li class="routing labs">
 						<a href="architecture-examples/angularjs-perf/" data-source="http://angularjs.org" data-content="What HTML would have been had it been designed for web apps. A version with several performance optimizations.">AngularJS <br>(optimized)</a>
 					</li>
+					<li class="routing labs">
+						<a href="labs/architecture-examples/react/" data-source="http://facebook.github.io/react/" data-content="React is a JavaScript library for building user interfaces.">React</a>
+					</li>
 				</ul>
 				<hr>
 				<h2>Compile To JavaScript</h2>
