o_O: Added missing footer note

--- a/labs/architecture-examples/o_O/index.html
+++ b/labs/architecture-examples/o_O/index.html
@@ -46,6 +46,7 @@
 	<footer id="info">
 		<p>Double-click to edit a todo</p>
 		<p>Created by <a href="http://weepy.github.com">weepy (Jonah Fox)</a></p>
+		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
 	<script src="bower_components/todomvc-common/base.js"></script>
 	<script src="bower_components/jquery/jquery.js"></script>
