--- a/labs/architecture-examples/epitome/index.html
+++ b/labs/architecture-examples/epitome/index.html
@@ -22,19 +22,21 @@
 	<footer id="info">
 		<p>Double-click to edit a todo</p>
 		<p>Created by <a href="https://github.com/DimitarChristoff/">Dimitar Christoff</a></p>
-    <p>Powered by <a href="http://dimitarchristoff.github.com/Epitome">Epitome for MooTools</a></p>
+		<p>Powered by <a href="http://epitome-mvc.github.io/Epitome">Epitome for MooTools</a></p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
 	<script type="text/template" id="item-template">
 		<div class="view">
-      <input class="toggle" type="checkbox" <%=completedCheckbox%>>
+			<input class="toggle" type="checkbox" <%=completedCheckbox%>>
 			<label><%-title%></label>
 			<button class="destroy"></button>
 		</div>
     <input class="edit" value="<%=title%>">
 	</script>
 	<script type="text/template" id="stats-template">
-		<span id="todo-count"><strong><%=remaining%></strong> item<% if (obj.remaining !== 1) { %>s<% } %> left</span>
+		<span id="todo-count">
+			<strong><%=remaining%></strong> item<% if (obj.remaining !== 1) { %>s<% } %> left
+		</span>
 		<ul id="filters">
 			<li>
 				<a class="selected" href="#!/">All</a>
@@ -54,7 +56,7 @@
 	<!-- mootools -->
 	<script src="js/lib/mootools-yui-compressed.js"></script>
 	<!-- epitome pre-compiled -->
-	<script src="bower_components/epitome/Epitome-min.js"></script>
+	<script src="bower_components/Epitome/Epitome-min.js"></script>
 	<!-- todo app -->
 	<script src="js/models/todo-model.js"></script>
 	<script src="js/collections/todo-collection.js"></script>
