--- a/labs/architecture-examples/polymer/index.html
+++ b/labs/architecture-examples/polymer/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-framework="polymer">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -7,17 +7,20 @@
 		<link rel="stylesheet" href="app/app.css">
 	</head>
 	<body>
-		<header>
-			<h1>todos</h1>
-		</header>
-		<td-todos></td-todos>
-		<footer id="info">
-			<p>Double-click to edit a todo</p>
-			<p>Created by <a href="http://www.polymer-project.org">The Polymer Authors</a></p>
-			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
-		</footer>
+		<section>
+			<header>
+				<h1>todos</h1>
+			</header>
+			<td-todos></td-todos>
+			<footer id="info">
+				<p>Double-click to edit a todo</p>
+				<p>Created by <a href="http://www.polymer-project.org">The Polymer Authors</a></p>
+				<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+			</footer>
+		</section>
 
 		<!-- Scripts here. Don't remove this ↓ -->
+		<script src="components/todomvc-common/base.js"></script>
 		<script src="components/polymer/polymer.min.js"></script>
 		<link rel="import" href="elements/td-todos.html">
 	</body>
