--- a/labs/architecture-examples/sapui5/index.html
+++ b/labs/architecture-examples/sapui5/index.html
@@ -1,21 +1,10 @@
-<!DOCTYPE HTML>
-<html>
+<!doctype html>
+<html lang="en" data-framework="sapui5">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
 		<title>SAPUI5 • TodoMVC</title>
-
-		<script
-			src="https://sapui5.netweaver.ondemand.com/resources/sap-ui-core.js"
-			id="sap-ui-bootstrap"
-			data-sap-ui-libs="sap.ui.commons,sap.ui.ux3,sap.ui.table"
-			data-sap-ui-theme="base">
-		</script>
-
-		<link href="css/base.css" rel="stylesheet" type="text/css">
-
-		<script src="js/app.js"></script>
+		<link href="css/base.css" rel="stylesheet">
 	</head>
 	<body role="application">
 		<section id="todoapp">
@@ -26,8 +15,16 @@
 		</section>
 		<footer id="info">
 			<p>Double-click to edit a todo</p>
-			<p>Written by Harald Schubert. Based on SAP UI5.</p>
-			<p>Part of <a href="http://todomvc.com/">TodoMVC</a>.</p>
+			<p>Written by Harald Schubert</p>
+			<p>Part of <a href="http://todomvc.com/">TodoMVC</a></p>
 		</footer>
+		<script
+			src="https://sapui5.netweaver.ondemand.com/resources/sap-ui-core.js"
+			id="sap-ui-bootstrap"
+			data-sap-ui-libs="sap.ui.commons,sap.ui.ux3,sap.ui.table"
+			data-sap-ui-theme="base">
+		</script>
+		<script src="bower_components/todomvc-common/base.js"></script>
+		<script src="js/app.js"></script>
 	</body>
 </html>
