--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
 					<li class="routing labs">
 						<a href="labs/architecture-examples/react/" data-source="http://facebook.github.io/react/" data-content="React is a JavaScript library for building user interfaces.">React</a>
 					</li>
+					<li class="routing labs">
+						<a href="labs/architecture-examples/sapui5/" data-source="http://scn.sap.com/community/developer-center/front-end" data-content="SAPUI5 is SAP's HTML5-based UI technology that allows you to build rich, interactive Web applications.">SAPUI5</a>
+					</li>
 				</ul>
 				<hr>
 				<h2>Compile To JavaScript</h2>
