--- a/labs/architecture-examples/sapui5/index.html
+++ b/labs/architecture-examples/sapui5/index.html
@@ -7,7 +7,7 @@
 		<script
 			src="https://sapui5.netweaver.ondemand.com/resources/sap-ui-core.js"
 			id="sap-ui-bootstrap"
-			data-sap-ui-libs="sap.ui.commons,sap.ui.ux3,sap.ui.table"
+			data-sap-ui-libs="sap.ui.commons"
 			data-sap-ui-theme="base">
 		</script>
 		<link href="css/base.css" rel="stylesheet">
