Add Firebase + AngularJS realtime example

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 				</ul>
 				<hr>
 				<h2>Real-time</h2>
-				<ul class="applist">
+				<ul class="applist amd">
 					<li class="labs">
 						<a href="http://todomvcapp.meteor.com" data-source="http://meteor.com" data-content="Meteor is an ultra-simple environment for building modern websites.A Meteor application is a mix of JavaScript that runs inside a client web browser, JavaScript that runs on the Meteor server inside a Node.js container, and all the supporting HTML fragments, CSS rules, and static assets. Meteor automates the packaging and transmission of these different components. And, it is quite flexible about how you choose to structure those components in your file tree.">Meteor</a>
 					</li>
@@ -234,6 +234,9 @@
 					</li>
 					<li class="labs">
 						<a href="https://github.com/tastejs/todomvc/blob/gh-pages/labs/architecture-examples/socketstream/readme.md" data-source="http://www.socketstream.org" data-content="SocketStream is a fast, modular Node.js web framework dedicated to building realtime single-page apps">SocketStream</a>
+					</li>
+					<li class="routing labs">
+						<a href="labs/architecture-examples/firebase-angular/" data-source="https://www.firebase.com" data-content="Firebase is a scalable realtime backend that lets you build apps without managing servers. Firebase persists and updates JSON data in realtime and is best used in combination with a JavaScrpt MV* framework such as AngularJS or Backbone.">Firebase + AngularJS</a>
 					</li>
 					<!--
 					// Link is currently not working.
