--- a/labs/architecture-examples/react/index.html
+++ b/labs/architecture-examples/react/index.html
@@ -5,19 +5,20 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>React • TodoMVC</title>
 		<link rel="stylesheet" href="bower_components/todomvc-common/base.css">
-		<link rel="stylesheet" href="css/app.css">
 	</head>
 	<body>
-		<div id="todoapp"></div>
+		<section id="todoapp"></section>
+		<footer id="info"></footer>
 		<div id="benchmark"></div>
 
 		<script src="bower_components/todomvc-common/base.js"></script>
 		<script src="bower_components/react/react.js"></script>
 		<script src="bower_components/react/JSXTransformer.js"></script>
+		<script src="../../../assets/director.min.js"></script>
 
-		<script type="text/jsx" src="js/utils.js"></script>
-		<script type="text/jsx" src="js/todoItem.js"></script>
-		<script type="text/jsx" src="js/footer.js"></script>
-		<script type="text/jsx" src="js/app.js"></script>
+		<script type="text/jsx" src="js/utils.jsx"></script>
+		<script type="text/jsx" src="js/todoItem.jsx"></script>
+		<script type="text/jsx" src="js/footer.jsx"></script>
+		<script type="text/jsx" src="js/app.jsx"></script>
 	</body>
 </html>
