directly set director as dep

--- a/labs/architecture-examples/react/index.html
+++ b/labs/architecture-examples/react/index.html
@@ -14,7 +14,7 @@
 		<script src="bower_components/todomvc-common/base.js"></script>
 		<script src="bower_components/react/react.js"></script>
 		<script src="bower_components/react/JSXTransformer.js"></script>
-		<script src="../../../assets/director.min.js"></script>
+		<script src="bower_components/director/build/director.min.js"></script>
 
 		<script type="text/jsx" src="js/utils.jsx"></script>
 		<script type="text/jsx" src="js/todoItem.jsx"></script>
