Add routing badge to Vanilla example

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 				<hr>
 				<h2>Compare these to a non-framework implementation</h2>
 				<ul class="applist">
-					<li>
+					<li class="routing">
 						<a href="vanilla-examples/vanillajs/" data-source="https://developer.mozilla.org/en/JavaScript" data-content="You know JavaScript right? :P">Vanilla JS</a>
 					</li>
 					<li>
