Updating to latest official Polymer TodoMVC implementation

--- a/architecture-examples/polymer/lib-elements/polymer-localstorage.html
+++ b/architecture-examples/polymer/lib-elements/polymer-localstorage.html
@@ -7,38 +7,47 @@ license that can be found in the LICENSE file.
 /**
  * @module Polymer Elements
  */
+/**
+ * polymer-localstorage provides access to localStorage.
+ *
+ * Example:
+ *
+ *     <polymer-localstorage name="my-app-storage" value="{{value}}"></polymer-localstorage>
+ *
+ * @class polymer-localstorage
+ */
 -->
-<element name="polymer-localstorage" attributes="name value isJson">
+<polymer-element name="polymer-localstorage" attributes="name value useRaw">
 	<template>
 		<style>
 			@host {
 				* {
-					display: none !important;
+					display: none;
 				}
 			}
 		</style>
 	</template>
 	<script>
-		Polymer.register(this, {
-			isJson: true,
-			ready: function () {
+		Polymer('polymer-localstorage', {
+			useRaw: false,
+			ready: function() {
 				this.load();
 			},
-			valueChanged: function () {
+			valueChanged: function() {
 				this.save();
 			},
-			load: function () {
+			load: function() {
 				var s = window.localStorage.getItem(this.name);
-				if (s && this.isJson) {
+				if (s && !this.useRaw) {
 					this.value = JSON.parse(s);
 				} else {
 					this.value = s;
 				}
 			},
-			save: function () {
-				var item = this.isJson ? JSON.stringify(this.value) : this.value;
-				window.localStorage.setItem(this.name, item);
+			save: function() {
+				window.localStorage.setItem(this.name,
+					this.useRaw ? this.value : JSON.stringify(this.value));
 			}
 		});
 	</script>
-</element>
+</polymer-element>
