--- a/architecture-examples/polymer/elements/td-model.html
+++ b/architecture-examples/polymer/elements/td-model.html
@@ -1,63 +1,72 @@
-<element name="td-model" attributes="filter items">
+<polymer-element name="td-model" attributes="filter items storageId">
 	<script>
-		Polymer.register(this, {
+		Polymer('td-model', {
 			filtered: null,
 			completedCount: 0,
 			activeCount: 0,
 			allCompleted: false,
-			ready: function () {
-				this.asyncMethod(function () {
+			ready: function() {
+				this.asyncMethod(function() {
 					this.items = this.items || [];
 				});
 			},
-			filterChanged: function () {
+			filterChanged: function() {
 				this.filterItems();
 			},
-			itemsChanged: function () {
-				this.completedCount = this.items.filter(this.filters.completed).length;
+			itemsChanged: function() {
+				this.completedCount =
+					this.items.filter(this.filters.completed).length;
 				this.activeCount = this.items.length - this.completedCount;
 				this.allCompleted = this.completedCount && !this.activeCount;
 				this.filterItems();
-				this.fire('td-model-changed');
+				if (this.storage) {
+					this.storage.value = this.items;
+					this.storage.save();
+				}
 			},
-			filterItems: function () {
+			storageIdChanged: function() {
+				this.storage = document.querySelector('#' + this.storageId);
+				this.storage && (this.items = this.storage.value);
+			},
+			filterItems: function() {
 				var fn = this.filters[this.filter];
 				this.filtered = fn ? this.items.filter(fn) : this.items;
 			},
-			newItem: function (title) {
+			newItem: function(title) {
 				title = String(title).trim();
 				if (title) {
-					this.items.push({
+					var item = {
 						title: title,
 						completed: false
-					});
+					};
+					this.items.push(item);
 					this.itemsChanged();
 				}
 			},
-			destroyItem: function (item) {
+			destroyItem: function(item) {
 				var i = this.items.indexOf(item);
 				if (i >= 0) {
 					this.items.splice(i, 1);
 				}
 				this.itemsChanged();
 			},
-			clearItems: function () {
+			clearItems: function(){
 				this.items = this.items.filter(this.filters.active);
 			},
-			setItemsCompleted: function (completed) {
-				this.items.forEach(function (item) {
+			setItemsCompleted: function(completed) {
+				this.items.forEach(function(item) {
 					item.completed = completed;
 				});
 				this.itemsChanged();
 			},
 			filters: {
-				active: function (item) {
+				active: function(item) {
 					return !item.completed;
 				},
-				completed: function (item) {
+				completed: function(item) {
 					return item.completed;
 				}
 			}
 	 });
 	</script>
-</element>
+</polymer-element>
