--- a/architecture-examples/polymer/lib-elements/polymer-selection.html
+++ b/architecture-examples/polymer/lib-elements/polymer-selection.html
@@ -8,7 +8,7 @@ license that can be found in the LICENSE file.
  * @module Polymer Elements
  */
 -->
-<element name="polymer-selection" attributes="multi">
+<polymer-element name="polymer-selection" attributes="multi">
 	<template>
 		<style>
 			@host {
@@ -19,47 +19,46 @@ license that can be found in the LICENSE file.
 		</style>
 	</template>
 	<script>
-		Polymer.register(this, {
+		Polymer('polymer-selection', {
 			multi: false,
-			ready: function () {
+			ready: function() {
 				this.clear();
 			},
-			clear: function () {
+			clear: function() {
 				this.selection = [];
 			},
-			getSelection: function () {
+			getSelection: function() {
 				return this.multi ? this.selection : this.selection[0];
 			},
-			isSelected: function (inItem) {
-				return this.selection.indexOf(inItem) >= 0;
+			isSelected: function(item) {
+				return this.selection.indexOf(item) >= 0;
 			},
-			setItemSelected: function (inItem, inIsSelected) {
-				var i;
-				if (inItem) {
-					if (inIsSelected) {
-						this.selection.push(inItem);
+			setItemSelected: function(item, isSelected) {
+				if (item) {
+					if (isSelected) {
+						this.selection.push(item);
 					} else {
-						i = this.selection.indexOf(inItem);
+						var i = this.selection.indexOf(item);
 						if (i >= 0) {
 							this.selection.splice(i, 1);
 						}
 					}
 					// TODO(sjmiles): consider replacing with summary
 					// notifications (asynchronous job)
-					this.asend("select", { isSelected: inIsSelected, item: inItem });
+					this.asyncFire("polymer-select", {isSelected: isSelected, item: item});
 				}
 			},
-			select: function (inItem) {
+			select: function(item) {
 				if (this.multi) {
-					this.toggle(inItem);
-				} else if (this.getSelection() !== inItem) {
+					this.toggle(item);
+				} else if (this.getSelection() !== item) {
 					this.setItemSelected(this.getSelection(), false);
-					this.setItemSelected(inItem, true);
+					this.setItemSelected(item, true);
 				}
 			},
-			toggle: function (inItem) {
-				this.setItemSelected(inItem, !this.isSelected(inItem));
+			toggle: function(item) {
+				this.setItemSelected(item, !this.isSelected(item));
 			}
 		});
 	</script>
-</element>
+</polymer-element>
